feat: .gitignore library path fixed 2

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
 /Midnight Grocery Run/[Ll]ibrary/
+Library/
 /[Tt]emp/
 /[Oo]bj/
 /[Bb]uild/
